# gasify

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yml
experimentdata/: __init__.py  humidity.py  unit.py
gasify/: __init__.py  gas.py  humidity.py  unit.py
tests/: humidity_test.py  test_gas.py  test_humidity.py  test_unit.py  util.py
